# strong-xml

./: Cargo.toml  LICENSE  README.md
.github/workflows/: test.yml
src/: lib.rs
strong-xml/: Cargo.toml  README.md
strong-xml-derive/: Cargo.toml
strong-xml-derive/src/: lib.rs  types.rs  xml_read.rs  xml_write.rs
strong-xml-derive/src/read/: mod.rs  named.rs  newtype.rs  unit.rs  unname.rs
strong-xml-derive/src/utils/: elide_lifetime.rs  input_lifetime.rs  mod.rs
strong-xml-derive/src/write/: mod.rs  named.rs  newtype.rs  unit.rs  unname.rs
strong-xml/src/: lib.rs  log.rs  noop_log.rs  read_text.rs  read_till_element_start.rs  read_to_end.rs  xml_error.rs  xml_escape.rs  xml_read.rs  xml_reader.rs  xml_unescape.rs  xml_write.rs  xml_writer.rs
test-suite/: Cargo.toml
test-suite/tests/: bool.rs  cdata.rs  containers.rs  default.rs  display.rs  enum.rs  from_str.rs  issue_5.rs  issue_7.rs  log.rs  multiple_lifetimes.rs  namespaces.rs  nested.rs  string_empty_tag.rs  struct.rs  text.rs  tuple_struct.rs  where_clause.rs  xml_header.rs
test_suite/: Cargo.toml
test_suite/tests/: empty.rs  test.rs
tests/: test.rs
xmlparser-derive-core/: Cargo.toml
xmlparser-derive-core/src/: lib.rs  xml_read.rs  xml_write.rs
xmlparser-derive-utils/: Cargo.toml
xmlparser-derive-utils/src/: lib.rs  read_text.rs  read_till_element_start.rs  read_to_end.rs  xml_error.rs  xml_escape.rs  xml_read.rs  xml_write.rs
