[workspace]
members = [
    ".",
    "xmlparser-derive-core",
    "xmlparser-derive-utils"
]

[package]
name = "xmlparser-derive"
version = "0.1.0"
authors = ["PoiScript <poiscript@gmail.com>"]
edition = "2018"

[dependencies]
xmlparser-derive-core = { version = "0.1.0", path = "xmlparser-derive-core" }
xmlparser-derive-utils = { version = "0.1.0", path = "xmlparser-derive-utils" }

[dev-dependencies]
env_logger = "0.7.1"
log = "0.4.8"
xmlparser = "0.13.0"
