[workspace]
members = [
    ".",
    "xmlparser-derive-core",
    "xmlparser-derive-utils"
]

[package]
name = "xmlparser-derive"
version = "0.1.2"
repository = "https://github.com/PoiScript/xmlparser-derive"
description = "A proc macro to generate functions for writing to and parsing from xml string, based on xmlparser."
license = "MIT"
readme = "README.md"
authors = ["PoiScript <poiscript@gmail.com>"]
keywords = ["xml", "xmlparser", "derive", "proc-macro"]
edition = "2018"

[dependencies]
xmlparser-derive-core = { version = "0.1.0", path = "xmlparser-derive-core" }
xmlparser-derive-utils = { version = "0.1.0", path = "xmlparser-derive-utils" }

[dev-dependencies]
env_logger = "0.7.1"
log = "0.4.8"
xmlparser = "0.13.0"
