[package]
name = "strong-xml-derive"
version = "0.1.3"
repository = "https://github.com/PoiScript/strong-xml"
description = "Derive marco of strong-xml."
license = "MIT"
authors = ["PoiScript <poiscript@gmail.com>"]
edition = "2018"

[lib]
name = "strong_xml_derive"
proc-macro = true

[dependencies]
proc-macro2 = "1.0.8"
quote = "1.0.2"
syn = { version = "1.0.15", features = ["extra-traits"] }
