[package]
name = "strong-xml-derive"
version = "0.5.0"
repository = "https://github.com/PoiScript/strong-xml"
description = "Derive marco of strong-xml."
license = "MIT"
authors = ["PoiScript <poiscript@gmail.com>"]
edition = "2018"

[lib]
name = "strong_xml_derive"
proc-macro = true

[dependencies]
proc-macro2 = "1.0.10"
quote = "1.0.3"
syn = "1.0.17"
