[package]
name = "strong-xml"
version = "0.6.1"
repository = "https://github.com/PoiScript/strong-xml"
description = "Strong typed xml, based on xmlparser."
license = "MIT"
readme = "README.md"
authors = ["PoiScript <poiscript@gmail.com>"]
keywords = ["xml", "xmlparser", "derive", "proc-macro"]
edition = "2018"

[dependencies]
jetscii = "0.4.4"
lazy_static = "1.4.0"
log = { version = "0.4.8", optional = true }
memchr = "2.3.3"
strong-xml-derive = { version = "0.6.1", path = "../strong-xml-derive" }
xmlparser = "0.13.1"

[dev-dependencies]
env_logger = "0.7.1"
